# raytracer_c

./: .gitmodules  CMakeLists.txt
include/: config.h  image.h  scene.h  types.h
src/: image.c  main.c
